api_versioned_docs/version-12.1.2.1/avalonia/controls/presenters/index.mdx
---
title: 'Avalonia.Controls.Presenters'
hide_title: true
slug: '/avalonia/controls/presenters'
uid: 'Avalonia.Controls.Presenters'
commentId: 'N:Avalonia.Controls.Presenters'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Presenters'
tfms:
  - 'net10.0'
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Presenters Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Controls.Presenters`

</div>

## Types

- [ContentPresenter](contentpresenter.mdx) - Presents a single item of data inside a [Avalonia.Controls.Primitives.TemplatedControl](xref:Avalonia.Controls.Primitives.TemplatedControl) template.
- [ItemsPresenter](itemspresenter.mdx) - Presents items inside an [Avalonia.Controls.ItemsControl](xref:Avalonia.Controls.ItemsControl).
- [ScrollContentPresenter](scrollcontentpresenter.mdx) - Presents a scrolling view of content inside a [Avalonia.Controls.ScrollViewer](xref:Avalonia.Controls.ScrollViewer).
- [TableViewCellsPresenter](tableviewcellspresenter.mdx) - Lays out the cells of a [Avalonia.Controls.TableViewRow](xref:Avalonia.Controls.TableViewRow) according to the column definitions
of the parent [Avalonia.Controls.TableView](xref:Avalonia.Controls.TableView).
- [TableViewColumnHeadersPresenter](tableviewcolumnheaderspresenter.mdx) - Displays the column headers for a [Avalonia.Controls.Presenters.TableViewColumnHeadersPresenter.TableView](xref:Avalonia.Controls.Presenters.TableViewColumnHeadersPresenter.TableView).
Computes column widths (pixel and star) and exposes them via
[Avalonia.Controls.TableViewColumn.ActualWidth](xref:Avalonia.Controls.TableViewColumn.ActualWidth) so that [Avalonia.Controls.Presenters.TableViewCellsPresenter](xref:Avalonia.Controls.Presenters.TableViewCellsPresenter)
can align cells with the headers.
- [TextPresenter](textpresenter.mdx)
- [VirtualKeyboardLayoutPresenter](virtualkeyboardlayoutpresenter.mdx) - Presents the physical layout of keyboard keys and handles pointer interactions for key presses, gestures, and extended key popups.
You are only supposed to use this class as a part of a [Avalonia.Controls.Presenters.VirtualKeyboardPresenter](xref:Avalonia.Controls.Presenters.VirtualKeyboardPresenter) control template
- [VirtualKeyboardPresenter](virtualkeyboardpresenter.mdx) - Presents the virtual keyboard UI and handles input method switching, IME interactions, and key input processing.
You are only supposed to use this class as a part of a [Avalonia.Controls.VirtualKeyboard](xref:Avalonia.Controls.VirtualKeyboard) or [Avalonia.Controls.VirtualKeyboardScope](xref:Avalonia.Controls.VirtualKeyboardScope)
control template
</ApiRefPage>

